[package]
name = "editor"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36.0", features = ["fs"] }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.iced]
git = "https://github.com/iced-rs/iced.git"
tag = "text-editor"
version = "0.12.0"
features = ["debug"]
