[package]
name = "editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.38.2", features = ["fs"] }

[dependencies.iced]
git = "https://github.com/iced-rs/iced.git"
tag = "text-editor"
version = "0.12.0"
features = ["debug", "tokio", "highlighter"]

[dependencies.rfd]
version = "0.14.0"
default-features = false
features = ["tokio", "gtk3"]
